slider white space bug fix

--- a/recipes/static/css/style.css
+++ b/recipes/static/css/style.css
@@ -19,7 +19,7 @@ main {
 
 /*Nav-bar*/
 #nav-logo {
-    height: 5vh;
+    height: 3vh;
     margin: 1vh;
 }
 
@@ -34,13 +34,20 @@ main {
     padding: 1vw;
 }
 
+.page-footer {
+    z-index: 3 !important;
+}
+
 /*Hero-slider*/
 .slider {
-    height: 82vh!important;
+    max-height: 100vh!important;
+    z-index: 1 !important;
+    position: relative;
 }
 
 .slides {
-    height: 82vh!important;
+    height: 90vh !important;
+    z-index: 2 !important;
 }
 
 /*Cards*/
